--- a/exercícios/desafio012/estilo/style.css
+++ b/exercícios/desafio012/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url(https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap);
+
+@import url(https//fonts.googleapis.com/css2?family=Sriracha&display=swap);
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +18,7 @@
     html,body{
         min-height: 100vh;
         background-color: darkgray;
+        font-family: var(--fonte1) ;
 
     }
 
@@ -21,6 +31,8 @@
     header > h1{
         padding-top: 50px;
         font-variant: small-caps;
+        font-family: var(--fonte2);
+        font-size: 10vw;
 
     }
 
@@ -44,6 +56,8 @@
         padding-bottom: 10vh;
         line-height: 2em;
         padding-left: 30px;
+        font-family: var(--fonte3);
+        font-size: 3.5vw;
     }
 
     section.normal {
@@ -57,8 +71,10 @@
     }
 
     section.imagem > p {
+        display: inline-block;
+        padding: 5px;
         background-color: rgba(0, 0, 0, 0.253);
-        width: 400px;
+       
     }
     footer{
         background-color: black;
